2006-06-07  Paul Walmsley <paul@booyaka.com>

	* canon.[ch], usb.[ch]: Adds support for downloading "secondary
	images" -- the JPEGs created when the capture resolution is set to
	the "RAW + JPEG" modes -- for the Canon EOS 5D camera.
	
	* canon.[ch], library.c: Adds remote control over "release
	parameters" -- shutter speed, ISO speed, aperture, resolution,
	autofocus mode -- for the Canon EOS 5D camera. It might work with
	other Canon "class 6" cameras

	* canon.[ch], library.c: Add support for querying the camera's
	shutter speed, ISO speed, aperture, resolution, and focus mode via
	gphoto2's configuration interface.  Tested on the Canon EOS 5D.

	* canon.[ch]: Add canon_int_do_control_dialogue() and
	canon_int_do_control_dialogue_payload().  These functions execute
	a remote capture command on the camera and return the camera's
	response. canon_int_do_control_dialogue_payload() gives the caller
	full control over the payload.  We need these to retrieve and set
	the camera's release parameters.

	* usb.[ch]: Split canon_usb_dialogue() into two functions:
	canon_usb_dialogue_full(), which returns the full camera response
	packet, needed by canon_usb_long_dialogue() (and also by
	canon_int_get_release_params(), later in this patch series).
	
	* canon.c: Add the USB ID for the EOS 5D in PC connection mode.
	
	* canon.[ch]:  
	* library.c: gphoto2's Canon driver currently supports two capture
	modes: canon_int_capture_preview(), which captures a thumbnail to
	the host computer; and canon_int_capture_image(), which captures a
	full-sized image to the camera's drive.  We'd like to control each
	parameter -- the capture image size class and the capture
	destination -- independently, without breaking compatibility with
	current applications.  So, add a configuration option, "Capture
	size class," by which the user can specify whether to operate in
	"compatibility mode" (the default -- represents the driver's
	previous behavior), or whether to capture thumbnails, or